--- a/qamatic/pact-broker/requirements.yaml
+++ b/qamatic/pact-broker/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
 - name: postgresql
-  version: 0.8.12
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  version: 9.6.0
+  repository: https://charts.bitnami.com/bitnami
 condition: postgresql.enabled
