--- a/qamatic/pact-broker/templates/deployment.yaml
+++ b/qamatic/pact-broker/templates/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ template "fullname" . }}
@@ -7,11 +7,14 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
   replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels:
+      app: "{{ .Chart.Name | replace "-" "_" }}"
   template:
     metadata:
       labels:
         draft: {{ default "draft-app" .Values.draft }}
-        app: {{ template "fullname" . }}
+        app: "{{ .Chart.Name | replace "-" "_" }}"
 {{- if .Values.podAnnotations }}
       annotations:
 {{ toYaml .Values.podAnnotations | indent 8 }}
@@ -25,13 +28,13 @@ spec:
           - containerPort: {{ .Values.service.internalPort }}
           env:
             - name: PACT_BROKER_DATABASE_HOST
-              value: {{ template "pact-broker.postgresql.fullname" . }}
+              value: {{ template "pact-broker.postgresql.fullname" . }}.default.svc.cluster.local
             - name: PACT_BROKER_DATABASE_NAME
-              value: {{ .Values.postgresql.postgresDatabase }}
+              value: {{ .Values.postgresql.postgresqlDatabase }}
             - name: PACT_BROKER_DATABASE_USERNAME
-              value: {{ .Values.postgresql.postgresUser }}
+              value: {{ .Values.postgresql.postgresqlUsername }}
             - name: PACT_BROKER_DATABASE_PASSWORD
-              value: {{ .Values.postgresql.postgresPassword }}             
+              value: {{ .Values.postgresql.postgresqlPassword }}             
             - name: PACT_BROKER_PORT 
               value: "9292"    
               
