--- a/qamatic/pact-broker/Chart.yaml
+++ b/qamatic/pact-broker/Chart.yaml
@@ -9,4 +9,6 @@ sources:
 maintainers:
   - name: Senthil Maruthaiappan
     email: senips@gmail.com
+  - name: Rodrigo Ramos Silva
+    email: rramos.silva@gmail.com
 
