--- a/qamatic/pact-broker/templates/service.yaml
+++ b/qamatic/pact-broker/templates/service.yaml
@@ -20,4 +20,5 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: {{ template "fullname" . }}
+    app: "{{ .Chart.Name | replace "-" "_" }}"
+
